[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/game files/asteroid.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Asteroid.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 92.9701
height = 52.2021

[sub_resource type="CircleShape2D" id=2]
radius = 13.9535

[node name="Asteroid" type="RigidBody2D" groups=[
"asteroids",
]]
collision_layer = 4
collision_mask = 11
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="AsteroidSprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
modulate = Color( 0.564706, 0.87451, 0.439216, 1 )
scale = Vector2( 5.16, 3.68 )
collision_layer = 4
collision_mask = 11

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 1, 1.28261 )
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Asteroid_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
